internal/buf/cmd/buf/testdata/workspace/success/roots/buf.work
version: v1
directories:
  - module1
  - module2
