internal/buf/cmd/buf/testdata/workspace/fail/notexist/buf.work
version: v1
directories:
  - notexist
